[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Kapoaka.gd" type="Script" id=1]
[ext_resource path="res://assets/dotpict/canette.png" type="Texture" id=2]
[ext_resource path="res://assets/dotpict/cercle.png" type="Texture" id=3]
[ext_resource path="res://assets/sound/kapoka_voadaka.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.5, 7.5 )

[sub_resource type="CircleShape2D" id=2]
radius = 91.214

[sub_resource type="Animation" id=4]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("object/kapoaka:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=3]
resource_name = "tomber"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("object/kapoaka:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 3, 4 ]
}

[node name="kapoaka" type="Node2D"]
position = Vector2( 1, 0 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="object" type="RigidBody2D" parent="."]
mode = 3
gravity_scale = 0.0

[node name="kapoaka" type="Sprite" parent="object"]
position = Vector2( -0.5, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
hframes = 4
vframes = 4
frame = 1

[node name="collision_self" type="CollisionShape2D" parent="object"]
position = Vector2( -0.5, 0.5 )
shape = SubResource( 1 )

[node name="cercle" type="Area2D" parent="."]
scale = Vector2( 0.3, 0.3 )

[node name="collision_cercle" type="CollisionShape2D" parent="cercle"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="cercle"]
texture = ExtResource( 3 )

[node name="animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/tomber = SubResource( 3 )

[node name="VodakaSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="child_entered_tree" from="object/collision_self" to="." method="_on_collision_self_child_entered_tree"]
[connection signal="body_entered" from="cercle" to="." method="_on_cercle_body_entered"]
[connection signal="body_exited" from="cercle" to="." method="_on_cercle_body_exited"]
